Added more on optional section

--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -120,6 +120,10 @@ others:
     bullets:
       - "1st place Champion in Ontario, Canada"
       - "https://gao.bluegolf.com/bluegolfw/gao15/event/gao1526/index.htm"
+  - title: "Content Creator"
+    bullets:
+      - " Created digital contents related to personal hobbies and interests"
+      - " Collaborated with multiple brands to promote their products to the fans"
   - title: "Activities/Hobbies"
     bullets:
       - "Junior Amateur Golf player (2008~2016)"
