--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -6,7 +6,12 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_HyebinYoon
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
 summary:
-  I recently graduated from Ryerson University with a Bachelor of Science (Honours) in  Computer Science, and I intend to venture into Software development and Cloud engineering. I have studied software engineering, software project management, algorithm, web development, discrete mathematics, data structure, data mining, database system, data science, computer network and security, and artificial intelligence. From an early age, I was always interested in becoming a developer and further extending my knowledge to become a cloud engineer, just like my father. Not to mention, I?ve developed various apps as a side project during my five years of study and acquired practical experience with Java,  JavaScript, SQL, and HTML/CSS. Currently, I?m working as a Software Developer at Jarvis Consulting Group in the SDE team and making the most of the experience at Jarvis Consulting Group. Altogether, I?m more than excited to use my knowledge and abilities to seek new opportunities and bring the best out of me for the new journey.
+  I recently graduated from Ryerson University with a Bachelor of Science (Honours) in  Computer Science, and I intend to venture into Software development and Cloud engineering. 
+  I have studied software engineering, software project management, algorithm, web development, discrete mathematics, data structure, data mining, database system, data science, computer network and security, and artificial intelligence. 
+  From an early age, I grew up looking up to my father, who was a Software Enginer, and  always interested in becoming a developer and further extending my knowledge to become a cloud engineer.
+  My passion extended to my free time and developed various applications to assist me in my hobby during my five years of study and acquired practical experience with Java, JavaScript, SQL, and HTML/CSS. 
+  Currently, I'm working as a Software Developer at Jarvis Consulting Group and proudly say I'm making the most of the experience working as my dream job. 
+  Altogether, I'm more than excited to use my knowledge and abilities to seek new opportunities and bring the best out of me for the new journey.
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -30,7 +35,7 @@ skills:
     - Firebase
   # At least 5 skills
   familiar:
-    - NumPy
+    - Postman
     - Docker
     - MongoDB
     - C#
@@ -39,31 +44,31 @@ skills:
 # List of Jarvis projects
 jarvis_projects:
   - name: "Cluster Monitor"
-    git_url: "/linux_sql"
+    git_url: "https://github.com/jarviscanada/jarvis_data_eng_HyebinYoon/tree/main/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
+    description: The Linux Cluster Monitoring Agent (LCMA) is a cluster monitoring software tool created for the Linux Cluster Administration (LCA) team. The tool's purpose is to manage and record hardware specifications and resource usage of their Linux clusters.
   - name: "Core Java Apps"
-    git_url: "/core_java"
+    git_url: "https://github.com/jarviscanada/jarvis_data_eng_HyebinYoon/tree/develop/core_java"
     description:
-      - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-  - name: "Springboot App"
-    git_url: "/springboot"
-    description: ""
-  - name: "Python Data Analytics"
-    git_url: "/python_data_anlytics"
-    description: ""
-  - name: "Hadoop"
-    git_url: "/hadoop"
-    description: ""
-  - name: "Spark"
-    git_url: "/spark"
-    description: ""
-  - name: "Cloud/DevOps"
-    git_url: "/cloud_devops"
-    description: ""
+      # - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+      - "JDBC App: The Java Database Connectivity (JDBC) application was developed to create a connection between a Java application and to PostgreSQL RDBMS using Java library, Data Access Object (DAO), Data Transfer Object (DTO) and Repository design pattern."
+      - "Grep App: The Grep Application imitates Linux grep command. From a given root directory, the grep app search through all the files in the folder and the sub-folders to find text patterns and output matched lines to a specific file."
+  #- name: "Springboot App"
+   # git_url: "/springboot"
+   # description: ""
+  #- name: "Python Data Analytics"
+  #  git_url: "/python_data_anlytics"
+  #  description: ""
+  #- name: "Hadoop"
+  #  git_url: "/hadoop"
+  #  description: ""
+  #- name: "Spark"
+  #  git_url: "/spark"
+  #  description: ""
+  #- name: "Cloud/DevOps"
+  #  git_url: "/cloud_devops"
+  #  description: ""
 
 # List of personal or academic projects
 # Feel free to add more projects
@@ -79,7 +84,7 @@ highlighted_projects:
     description: "2D Platform game where users can control the character to reach the finish line, avoiding/killing monsters, collecting coins and avoid from falling off the platform. Available in Windows and Mac operating systems.Used Unity Engine to develop the game in a 2-Dimension space.Implemented Rigidbody, SpriteRenderer, Animator, AudioClip and Collider in C#. Gathered user feedback and integrated it into product development and maintenance. Applied basic physic and game theory. "
   - name: "Discord Lyric Bot"
     git_url: "https://github.com/binyoon99/bintonBot"
-    description: "Collaborated with a team of two to develop a lyric bot that predicts a name of the song from inputted lyric by the users. Bot uses Python API to provide information to the users, including the lyrics, album, and artist of the predicted song. Used a Python package, beautiful soup, to parse and extract data from HTML lyric websites and compare the data to given information by the users. Responsive to users? chat with various commands. Utilized GitHub to collab."
+    description: "Collaborated with a team of two to develop a lyric bot that predicts a name of the song from inputted lyric by the users. Bot uses Python API to provide information to the users, including the lyrics, album, and artist of the predicted song. Used a Python package, beautiful soup, to parse and extract data from HTML lyric websites and compare the data to given information by the users. Responsive to users' chat with various commands. Utilized GitHub to collab."
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
 #The description must be more than 25 words. If your experience is not software related, please focus on soft skills and achievements (e.g. team collaboration, problem-solving, improvements, communication).
@@ -89,7 +94,7 @@ professional_experience:
     company: "Jarvis"
     duration: "Sept 2022-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Donec mattis sed justo et sagittis. Vestibulum lacinia nulla ipsum. Curabitur imperdiet nibh vitae leo lacinia laoreet. Nullam accumsan, lectus ut maximus ultricies, augue justo egestas mi, vel bibendum felis."
+    description: "Worked in a team of software developers in an Agile/Scrum work environment. Performed daily scrum meetings, and take the initiative and set an example as team leader for two-week sprint period. Developed various applications in an Agile team, communicating with other developers about the design, concept, impediments, and brainstorming ideas.  Worked with technologies such as vision of each projects.  Github, Docker, Maven, PostgresSQL, APIs, Postman."
   - title: "Information Technology Support Helpdesk"
     company: "Ted Rogers School of Management "
     duration: "Jan 2022 - May 2022"
@@ -102,7 +107,7 @@ professional_experience:
 
 #List of edcuation
 education: 
-  - school_name: "Ryerson university"
+  - school_name: "Ryerson University"
     duration: "2017-2022"
     degree: "Bachelor of Science (Honours), Computer Science"
     department: "Science"
