--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -129,7 +129,7 @@ others:
     bullets:
       - " Created digital contents related to personal hobbies and interests"
       - " Collaborated with multiple brands to promote their products to the fans"
-  - title: "Activities/Hobbies"ß
+  - title: "Activities/Hobbies"
     bullets:
       - "Junior Amateur Golf player (2008~2016)"
       - "Casual Gamer"
