--- a/core_java/twitter/pom.xml
+++ b/core_java/twitter/pom.xml
@@ -1,5 +1,19 @@
-<project>
-    <!--Parent project-->
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ca.jrvs.apps</groupId>
+    <artifactId>twitter</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <start-class>ca.jrvs.apps.twitter.TwitterCLIApp</start-class>
+
+
+    </properties>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -7,26 +21,15 @@
         <relativePath/>
     </parent>
 
-    <!--Project name-->
-    <modelVersion>4.0.0</modelVersion>>
-    <groupId>ca.jrvs.apps</groupId>
-    <artifactId>twitter</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <!--Make sure you use JDK1.8-->
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 
     <dependencies>
-        <!--oauth 1.0 and httpclient4-->
         <dependency>
             <groupId>oauth.signpost</groupId>
             <artifactId>signpost-commonshttp4</artifactId>
             <version>1.2.1.2</version>
         </dependency>
         <!--Jackson JSON-->
+        <!--dependency version is inherited from the parent-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -44,7 +47,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!--spring-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -56,5 +58,19 @@
             <scope>test</scope>
         </dependency>
 
+
+
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${project.parent.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
