--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -123,13 +123,13 @@ others:
   - title: "2015 ONTARIO JUVENILE (U17) Golf GIRLS' CHAMPION"
     #list of items
     bullets:
-      - "1st place Champion in Ontario, Canada"
+      - 1st place Champion in Ontario, Canada
   - title: "Content Creator"
     bullets:
-      - " Created digital contents related to personal hobbies and interests"
-      - " Collaborated with multiple brands to promote their products to the fans"
+      - Created digital contents related to personal hobbies and interests
+      - Collaborated with multiple brands to promote their products to the fans
   - title: "Activities/Hobbies"
     bullets:
-      - "Junior Amateur Golf player (2008~2016)"
-      - "Casual Gamer"
-      - "Coffee Lover"
+      - Junior Amateur Golf player (2008~2016)
+      - Casual Gamer
+      - Coffee Lover
