--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -130,6 +130,6 @@ others:
       - Collaborated with multiple brands to promote their products to the fans
   - title: "Activities/Hobbies"
     bullets:
-      - Junior Amateur Golf player (2008~2016)
+      - Golfer
       - Casual Gamer
       - Coffee Lover
