--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -123,13 +123,12 @@ others:
   - title: "2015 ONTARIO JUVENILE (U17) Golf GIRLS' CHAMPION"
     #list of items
     bullets:
-      - 1st place Champion in Ontario, Canada
+      - "1st place Ontario Champion in Under 17 Girl's Amateur Golf Tournament "
   - title: "Content Creator"
     bullets:
-      - Created digital contents related to personal hobbies and interests
-      - Collaborated with multiple brands to promote their products to the fans
+      - "Created digital contents related to personal hobbies and interests and collaborated with multiple brands to promote their products to the fans"
   - title: "Activities/Hobbies"
     bullets:
-      - Golfer
-      - Casual Gamer
-      - Coffee Lover
+      - "Golfer"
+      - "Casual Gamer"
+      - "Coffee Lover"
